# pandoc-rustful-api

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.rust  LICENSE  README.md  Rocket.toml  Settings.toml
.github/workflows/: docker-publish.yml  snyk-container-analysis.yml
api/: Cargo.toml
api/src/: main.rs
api/src/configs/: settings.rs
api/src/routes/: api.rs  swagger.rs
api/src/routes/v1/: jobs.rs
api/src/services/: job_service.rs
cli-tool/: Cargo.toml
cli-tool/src/: client.rs  compress.rs  main.rs
examples/single-file-report/: report.md
src/: main.rs
src/cli-tool/: client.rs  main.rs
src/configs/: constants.rs  mod.rs  settings.rs
src/middlewares/: authentication.rs
src/models/: job.rs
src/routes/: api.rs  mod.rs  swagger.rs
src/routes/v1/: hello.rs  jobs.rs  mod.rs
src/routes/v1/pandoc/: jobs.rs  mod.rs
src/routes/v1/pandoc/job/: actions.rs  job.rs  mod.rs
src/services/: job_service.rs
static/swagger-ui/: README.md  index.html  swagger-initializer.js
