[package]
name = "pandoc-rustful-api"
version = "0.1.0"
authors = ["Christian Fries <christian.fries123@gmail.com>"]
edition = "2021"

[dependencies]
actix-web = "3"
actix-files = "0.5"
serde = "1.0"
env_logger = "0.9"
log = "0.4"

[dependencies.paperclip]
version = "0.6"
features = ["actix", "uuid"]

[dependencies.uuid]
version = "0.8"
features = ["serde", "v4"]