[package]
name = "pandoc-rustful-api"
version = "0.1.0"
authors = ["Christian Fries <christian.fries123@gmail.com>"]
edition = "2021"

[[bin]]
name = "pandoc-rustful-api"
path = "src/main.rs"

[[bin]]
name = "pandoc-rustful-cli"
path = "src/cli-tool/main.rs"

[dependencies]
actix-web = "3"
actix-files = "0.5"
actix-multipart = "0.3"
serde = "1.0"
serde_json = "1.0"
toml = "0.5"
env_logger = "0.9"
log = "0.4"
sanitize-filename = "0.3"
futures-util = "0.3"

[dependencies.paperclip]
version = "0.6"
features = ["actix", "actix-multipart", "actix-files", "uuid"]

[dependencies.uuid]
version = "0.8"
features = ["serde", "v4"]