[package]
name = "pandoc-rustful-api"
version = "0.1.0"
authors = ["Christian Fries <christian.fries123@gmail.com>"]
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-files = "0.6"
actix-multipart = "0.4"
actix-cors = "0.6"
#actix-web-httpauth = "0.5.1"
serde = "1.0"
serde_json = "1.0"
toml = "0.5"
env_logger = "0.9"
log = "0.4"
sanitize-filename = "0.3"
futures-util = "0.3"

[dependencies.paperclip]
version = "0.7.0"
features = ["actix4", "actix-multipart", "actix-files", "uuid"]

[dependencies.uuid]
version = "0.8"
features = ["serde", "v4"]

[dependencies.zip]
version = "0.6"
features = ["deflate"]