[package]
name = "pandoc-rustful-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
env_logger = "0.9"
log = "0.4"
anyhow = "1.0"
walkdir = "2.3"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.clap]
version = "3.1"
features = ["derive", "env"]

[dependencies.reqwest]
version = "0.11"
features = ["json", "multipart", "stream"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.tokio-util]
version = "~0.6"
features = ["codec"]

[dependencies.uuid]
version = "0.8"
features = ["serde", "v4"]

[dependencies.zip]
version = "0.6"
features = ["deflate"]